git i Alias Documented

--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -56,7 +56,7 @@
 	# FULL - comands
 	# crea un commit y guarda los cambios en GitHub. Uso: git a A multi-line commit without quotes
 	a = "!f() { git ac \"$*\" && git pu && git sc; }; f"
-	# crea un repositorio en Git y GitHub con las credenciales y nombre otorgados ej: git i F REPOSITORY-NAME 
+	# crea un repositorio en Git y GitHub con las credenciales y nombre otorgados. Uso: git i F REPOSITORY-NAME 
 	i = "!f() { git validate $1 $2 || ( git nrr $1 $2 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Repository created successfully. && git pu && git sc && git msg)}; f"
 	# crea un repositorio completo con Backend-Express y Frontend-Next para Git y GitHub. Uso: git ip F APP-NAME
 	ip = "!f() { (git na && git i $1 $2) } ; f"
