--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -31,7 +31,7 @@
 	# REMOVE - files and documents
 	k = "!f(){ rm -rf .git; };f"
 	# LINK - custom config
-	ul = "!f(){ cp -rl ~/Desktop/Timoideas/GitHub/Preferences/vsCode/User ~/AppData/Roaming/code/; };f"
+	ul = "!f(){ rm -rf ~/AppData/Roaming/code/User && cp -rl ~/Desktop/Timoideas/GitHub/Preferences/vsCode/User ~/AppData/Roaming/code/; };f"
 	gl = "!f(){ rm ~/.gitconfig && cp -rl Git/.gitconfig ~/; };f"
 	# CONFIG - local, global user values.
 	un = config --global user.name 
