Folders icon- associations

--- a/vsCode/User/settings.json
+++ b/vsCode/User/settings.json
@@ -14,6 +14,8 @@
     "titleBar": "darken"
   },
   "material-icon-theme.folders.associations": {
+    "Coreldraw": "Mappings",
+    "Git": "Git",
     "main": "api",
     "project": "intellij",
     "target": "intellij",
