Folders,Files icon- associations

--- a/vsCode/User/settings.json
+++ b/vsCode/User/settings.json
@@ -38,6 +38,7 @@
     "null": "batch"
   },
   "material-icon-theme.files.associations": {
+    ".deployment": "azure",
     "*.vscdb": "document",
     "*.backup": "document",
     "*.wacomprefs": "settings"
