--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -64,10 +64,6 @@
 	nrb = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 -d $2 --public -y --template https://github.com/FernandoTimo/Backend-Express && git pull origin main && echo \"# Backend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
 	# Aqui agregar web y descripcion a github
 	vv = "!f() { mkdir -p \"Releases\" && echo -e \"### Core Changes \n - $2\" >> Releases/Release_$1.md && gh release create -t v$1 v$1 -F Releases/Release_$1.md $3; }; f"
-	# --- uso: git nc Componente Directorio?
-	nc = "!f() { [ -z $2 ] && dir=components || dir=components/$2; mkdir -p $dir && echo -e \"import style from './$1.module.css';\nfunction $1() {\n\treturn (\n\t\t<div className={style.$1}>\n\t\t\t<h2>$1</h2>\n\t\t</div>\n\t);\n}\nexport default $1;\" >> $dir/$1.component.js && echo -e \".$1 {\n\tfont-size: 2vh;\n\ttext-align: center;\n}\" >> $dir/$1.module.css; }; f"
-	# crea una nueva pagina para next.js, uso: git np Pagina Directorio
-	np = "!f() { echo -e \"import style from 'styles/pages/$1.module.css';\nimport Head_Main from 'heads/Main.head';\nimport { Section, Body, Content } from 'components/Resources/Timoideas';\nexport default function $1() {\n\treturn (\n\t\t<>\n\t\t\t<Head_Main />\n\t\t\t<Body>\n\t\t\t\t<Section>\n\t\t\t\t\t<Content center>\n\t\t\t\t\t\t<h1 className={style.$1}>$1</h1>\n\t\t\t\t\t</Content>\n\t\t\t\t</Section>\n\t\t\t</Body>\n\t\t</>\n\t);\n}\" >> pages/$1.js && echo -e \".$1 {\n\tfont-size: 2vh;\n\ttext-align: center;\n}\" >> styles/pages/$1.module.css; }; f"
 	
 	# 	FULL - comands
 
@@ -76,4 +72,4 @@
 	# crea un repositorio en Git y GitHub con las credenciales y nombre otorgados. Uso: git i F REPOSITORY-NAME 
 	i = "!f() { git validate $1 $2 || ( git nrr $1 $2 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Repository created successfully. && git pu && git sc && git msg $1 $2)}; f"
 	# crea un repositorio completo con Backend-Express y Frontend-Next para Git y GitHub. Uso: git ip F APP-NAME
-	ip = "!f() { (git na && git i $1 $2) } ; f"
+	ip = "!f() { (git nla && git i $1 $2) } ; f"
