--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\FernandoTimo\Desktop\Iconos\Icons\settings.ico,0
+IconResource=D:\Iconos\Icons\settings.ico,0
 [ViewState]
 Mode=
 Vid=
