--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -30,9 +30,12 @@
 	sls = log --graph --oneline
 	# REMOVE - files and documents
 	k = "!f(){ rm -rf .git; };f"
+
 	# LINK - custom config
 	ul = "!f(){ rm -rf ~/AppData/Roaming/Code/User && cp -rl ~/Desktop/Preferences/vsCode/User ~/AppData/Roaming/Code/; };f"
 	gl = "!f(){ rm ~/.gitconfig && cp -rl ~/Desktop/Preferences/Git/.gitconfig ~/; };f"
+	bl = "!f(){ rm ~/.bashrc && cp -rl ~/Desktop/Preferences/Bash/.bashrc ~/; };f"
+
 	# CONFIG - local, global user values.
 	un = config --global user.name 
 	um = config --global user.email
