--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -61,10 +61,15 @@
 	ip = "!f() { git nr $1 $2 && echo \"# $2\" >> README.md && echo -e \"desktop.ini \n .vscode\" >> .gitignore && git ac Repository created successfully. && git pu && git sc && git msg; }; f"
 
 	# GitHub - cli
+
+	# Cambia de cuenta de Github. Uso: git gh F
 	gh = "!f() { bash ~/gh$1.sh; };f"
-	nrr = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 --public -d $2 -h http://Timoideas.com --public -y && git rs $1 $2 ; }; f"
-	nrf = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 --public -d $2 -y --template https://github.com/FernandoTimo/Frontend-Next && git pull origin main && echo \"# Frontend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
-	nrb = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 -d $2 -y --template https://github.com/FernandoTimo/Backend-Express && git pull origin main && echo \"# Backend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
+	# Crea un repositorio remoto en Github y lo clona localmente. Uso: git nrr F RepoName
+	nrr = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 --public -d $2 -h https://timoideas.com --public && git rs $1 $2 ; }; f"
+	# Crea un repositorio remoto en Github con la plantilla Frontend-Next y lo clona localmente. Uso: git nrf F Frontend-Clone
+	nrf = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 --public -d $2 --template https://github.com/FernandoTimo/Frontend-Next && git pull origin main && echo \"# Frontend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
+	# Crea un repositorio remoto en Github con la plantilla Backend-Express y lo clona localmente. Uso: git nrb F Backend-Clone
+	nrb = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 -d $2 --template https://github.com/FernandoTimo/Backend-Express && git pull origin main && echo \"# Backend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
 	# Aqui agregar web y descripcion a github
 	vv = "!f() { mkdir -p \"Releases\" && echo -e \"### Core Changes \n - $2\" >> Releases/Release_$1.md && gh release create -t v$1 v$1 -F Releases/Release_$1.md $3; }; f"
 	
