--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -1,8 +1,8 @@
 [core]
 	editor = code --wait
 [user]
-	email = fertimo99@gmail.com
-	name = FernandoTimo
+	email = Timoideas@hotmail.com
+	name = Timoideas
 [alias]
 	s = status
 	c = "!f() { git commit -m \"$*\"; }; f"
@@ -20,20 +20,35 @@
 	pu = push -u origin main
 	file = config --global -e
 	# SHOW - logs
-	si = "!f() { git sb && git srr && git scs && git l; }; f"
+	# show full info about commits
+	si = "!f() { git srr && git sb && git l && git scs ; }; f"
+	# show git exteral info
 	sei = "!gitk"
+	# show simple commit
 	scs = "!f() { echo -e \"\n$(tput setaf 9)---------- $(tput bold)Last commits $(tput sgr0)\" && [ -z $1 ] && (git log head -1 --oneline) || (git log head -$1 --oneline); }; f"
+	# show complete commit
 	sc = "!f() { echo -e \"\n$(tput setaf 9)---------- $(tput bold)Last commits $(tput sgr0)\" && [ -z $1 ] && (git log head -1) || (git log head -$1); }; f"
+	# show branch
 	sb = "!f() { echo -e \"\n$(tput setaf 9)---------- $(tput bold)Branch $(tput sgr0)\" && git branch; }; f"
+	# show remote origin
 	srr = "!f() { echo -e \"\n$(tput setaf 9)---------- $(tput bold)Remote origin $(tput sgr0)\" && git config --get remote.origin.url; }; f"
-	slf = log --graph 
+	# show complete logs
+	sl = log --graph 
+	# show simple logs
 	sls = log --graph --oneline
+
 	# REMOVE - files and documents
+	# remove .git directory
 	k = "!f(){ rm -rf .git; };f"
 
-	# LINK - custom config
-	ul = "!f(){ rm -rf ~/AppData/Roaming/Code/User && cp -rl ~/Desktop/Preferences/vsCode/User ~/AppData/Roaming/Code/; };f"
+	# LINK - custom config from Timoideas Preferences
+	# Crea un vínculo fuerte de la configuración User a la configuración Global de vsCode
+	ul = "!f(){ rm -rf ~/AppData/Roaming/Code/User && cp -rl ~/Preferences/vsCode/User ~/AppData/Roaming/Code/; };f"
+	# Crea un vínculo fuerte de la .gitconfig a la configuración Global de Git
 	gl = "!f(){ rm ~/.gitconfig && cp -rl ~/Desktop/Preferences/Git/.gitconfig ~/; };f"
+	# Crea un vínculo fuerte de la .bashrc a la configuración Global de Git Bash
+	bl = "!f(){ rm ~/.bashrc && cp -rl ~/Desktop/Preferences/Bash/.bashrc ~/; };f"
+	# Crea un vínculo fuerte de la .bashrc a la configuración Global de Git Bash
 	bl = "!f(){ rm ~/.bashrc && cp -rl ~/Desktop/Preferences/Bash/.bashrc ~/; };f"
 
 	# CONFIG - local, global user values.
@@ -65,9 +80,9 @@
 	# Cambia de cuenta de Github. Uso: git gh F
 	gh = "!f() { bash ~/gh$1.sh; };f"
 	# Crea un repositorio remoto en Github y lo clona localmente. Uso: git nrr F RepoName
-	nrr = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 --public -d $2 -h https://timoideas.com --public && git rs $1 $2 ; }; f"
+	nr = "!f() { git init && git l${1,,} && git gh $1 && gh repo create $2 --public -d $2 -h https://timoideas.com && git h$1 $2 && git ra $1 $2 ; }; f"
 	# Crea un repositorio remoto en Github con la plantilla Frontend-Next y lo clona localmente. Uso: git nrf F Frontend-Clone
-	nrf = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 --public -d $2 --template https://github.com/FernandoTimo/Frontend-Next && git pull origin main && echo \"# Frontend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
+	nrf = "!f() { git init && git l${1,,} && git gh $1 && gh repo create $2 --public -d $2 --template https://github.com/FernandoTimo/Frontend-Next && git pull origin main && echo \"# Frontend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
 	# Crea un repositorio remoto en Github con la plantilla Backend-Express y lo clona localmente. Uso: git nrb F Backend-Clone
 	nrb = "!f() { git init && git l$1 && git gh $1 && gh repo create $2 -d $2 --template https://github.com/FernandoTimo/Backend-Express && git pull origin main && echo \"# Backend $2\"> README.md && git rs $1 $2 && git a Readme && git msg $1 $2; }; f"
 	# Aqui agregar web y descripcion a github
